10/26 we did it

--- a/autonomy_repo/CMakeLists.txt
+++ b/autonomy_repo/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(s5_basic)
+project(autonomy_repo)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -7,13 +7,18 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
 
-install((PROGARMS
-      scripts/navigator.py
-      DESTINATION lib/${PROJECT_NAME}))
+
+install(PROGRAMS
+    scripts/heading_controller.py
+    scripts/p3_plot.py
+    scripts/navigator.py
+    DESTINATION lib/${PROJECT_NAME}
+)
+
+install(DIRECTORY launch rviz
+        DESTINATION share/${PROJECT_NAME})
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
