--- a/autonomy_repo/package.xml
+++ b/autonomy_repo/package.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>s5_basic</name>
+  <name>autonomy_repo</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="johnyu0611@utexas.edu">aa274</maintainer>
-  <license>Apache License 2.0</license>
+  <maintainer email="pora@todo.todo">pora</maintainer>
+  <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-
+  
+  <exec_depend>asl_tb3_lib</exec_depend>
+  <exec_depend>asl_tb3_msgs</exec_depend>
+  <exec_depend>rclpy</exec_depend>
+  
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
