--- a/autonomy_repo/CMakeLists.txt
+++ b/autonomy_repo/CMakeLists.txt
@@ -10,7 +10,8 @@ find_package(ament_cmake REQUIRED)
 
 
 install(PROGRAMS
-    scripts/heading_controller.py
+    # scripts/heading_controller.py
+    scripts/perception_controller.py
     scripts/p3_plot.py
     DESTINATION lib/${PROJECT_NAME}
 )
